# nucml

./: .codeclimate.yml  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  release-drafter.yml  stale.yml
.github/workflows/: release-drafter.yml
backup/docs/: objects.inv
docs/: .buildinfo  basic-walkthrough.html  contact.html  faq.html  genindex.html  index.html  index.html.lnk  installation-guide.html  modules.html  navigating-the-nde.html  nucml.ame.html  nucml.ensdf.html  nucml.evaluation.html  nucml.exfor.html  nucml.html  nucml.model.html  nucml.objects.html  nucml.plot.html  objects.inv  other-tutorials.html  py-modindex.html  search.html  searchindex.js  update_docs.bat  what-is-nucml.html
docs/.doctrees/: basic-walkthrough.doctree  contact.doctree  index.doctree  installation-guide.doctree  modules.doctree  navigating-the-nde.doctree  nucml.ensdf.doctree  nucml.evaluation.doctree  nucml.exfor.doctree  nucml.model.doctree  nucml.objects.doctree  nucml.plot.doctree  what-is-nucml.doctree
docs/_modules/: index.html
docs/_sources/: installation-guide.rst.txt  navigating-the-nde.rst.txt  nucml.ame.rst.txt  nucml.evaluation.rst.txt  what-is-nucml.rst.txt
docs/notebooks/: 0_EXFOR_MCFR_Flux.ipynb  0_Evaluating_Dataset_Quality.ipynb  0_Generating_MLXS_Benchmark.html  0_Loading_and_Plotting_Evaluations.html  0_Loading_and_Plotting_Evaluations.ipynb  1_Gathering_Benchmark_Results_B0.html  1_Gathering_Benchmark_Results_DT.html  1_Loading_ENSDF_RIPL_Datasets.html  1_Loading_ENSDF_RIPL_Datasets.ipynb  2_EDA_AME.html  2_EDA_RIPL.html  2_Loading_EXFOR_Datasets.html  3_EDA_EXFOR.html  4_Erroneous_Cross_Sections.html  4_Erroneous_Cross_Sections.ipynb
docs/source/: about.rst  basic-walkthrough.rst  conf.py  eda-datasets.rst  faq.rst  index.rst  installation.rst  loading-datasets-endf.rst  nucml.plot.rst  nucml.rst  processing-datasets.rst  validating-models  working-with-nucml.rst
docs2/: faq.html  genindex.html  index.html  modules.html  navigating-the-nde.html  nucml.ace.html  nucml.ensdf.html  nucml.evaluation.html  nucml.exfor.html  nucml.objects.html  py-modindex.html  search.html
docs2/.doctrees/: navigating-the-nde.doctree  nucml.ace.doctree  what-is-nucml.doctree
docs2/_sources/: index.rst.txt  nucml.exfor.rst.txt  nucml.objects.rst.txt
docs2/notebooks/: 0_Loading_and_Plotting_Evaluations.html  1_Loading_AME_Datasets.html  1_Loading_ENSDF_RIPL_Datasets.html  2_EDA_AME.html  2_Loading_EXFOR_Datasets.html  3_EDA_EXFOR.html
html/: basic-walkthrough.html  contact.html  faq.html  genindex.html  index.html  installation-guide.html  modules.html  navigating-the-nde.html  nucml.ace.html  nucml.ame.html  nucml.ensdf.html  nucml.evaluation.html  nucml.exfor.html  nucml.html  nucml.model.html  nucml.objects.html  nucml.plot.html  other-tutorials.html  search.html  what-is-nucml.html
html/.doctrees/: basic-walkthrough.doctree  contact.doctree  environment.pickle  faq.doctree  index.doctree  installation-guide.doctree  modules.doctree  navigating-the-nde.doctree  nucml.ace.doctree  nucml.ame.doctree  nucml.doctree  nucml.ensdf.doctree  nucml.evaluation.doctree  nucml.exfor.doctree  nucml.model.doctree  nucml.objects.doctree  nucml.plot.doctree  other-tutorials.doctree  what-is-nucml.doctree
html/_sources/: contact.rst.txt  index.rst.txt  installation-guide.rst.txt  nucml.model.rst.txt  other-tutorials.rst.txt
html/notebooks/: 0_ENSDF_Linear_Interpolation_NLD.html  0_EXFOR_MCFR_Flux.html  0_Evaluating_Dataset_Quality.html  0_Generating_MLXS_Benchmark.html  0_Loading_and_Plotting_Evaluations.html  1_Gathering_Benchmark_Results_DT.html  1_Loading_AME_Datasets.html  1_Loading_ENSDF_RIPL_Datasets.html  2_EDA_AME.html  2_EDA_RIPL.html  2_Hybrid_ML_ENDF_XS_Generation.html  2_Loading_EXFOR_Datasets.html  3_EDA_Cross_Sections.html  3_EDA_EXFOR.html  4_Erroneous_Cross_Sections.html
nucml/: _constants.py  config.py  config.yaml  configure.py  data_utils.py  dataset_generation.py  datasets.py  general_utilities.py  processing.py  setup.py
nucml/ace/: data_utilities.py  ml_utilities.py  plot.py  plotting_utilities.py  querying_utils.py  (+1 more)
scripts/: release_new.bat  release_new_version.bat  update_docs.bat  update_notebooks.sh
tests/: test_example.py
utilities/: update_docs.bat  update_github_pages.sh  update_notebooks.sh
(+164 files in other folders)
