[metadata]
name = nucml
long_description = file: README.rst, CHANGELOG.rst

[options]
python_requires = >= 3.8, < 3.10
packages = find:
install_requires =
    natsort
    pandas
    plotly
    matplotlib
    scikit-learn
    seaborn
    imageio
    wandb
    google-cloud-bigquery

[options.packages.find]
include = nucml*

[options.extras_require]
tests =
    pip-tools >= 6
    # Please run `pre-commit install-hooks` to install all packages for pre-commit
    pre-commit >= 2.14.0
    pytest >= 6
    pytest-cov
    pytest-html
    pytest-timeout
    pyright
    flake8
dev =
    # Add a list of packages required for development environment (Optional)
    typing-extensions
    pre-commit
docs =
    sphinx >= 4
    sphinx-rtd-theme


[flake8]
max_line_length = 120
ignore = E402, E226, W503, W605, D104
exclude =
    venv
    .eggs
    build
# pydocstyle configuration for flake8-docstrings
docstring-convention = google
docstring-match-dir = src
per-file-ignores =
    tests/*: D100, D205, D212, D415

[pycodestyle]
max-line-length = 120
