[metadata]
name = nucml
description = ML-oriented tools for navigating the nuclear data evaluation pipeline.
long_description = file: README.md
author = Pedro Junior Vicente Valdez
author_email = pedro.vicentevz@berkeley.edu
url = https://github.com/pedrojrv/nucml
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+),
    Operating System :: OS Independent,
    Development Status :: 3 - Alpha
keywords = [nuclear, ml, nucml, nuclear ml, nuclear data, cross section]
project_urls =
    Documentation = https://pedrojrv.github.io/nucml
license = MIT
version = 2.0.0.b0

[options]
python_requires = >= 3.10, < 3.11
include_package_data = True
packages = find:
install_requires =
    natsort
    pandas
    plotly
    matplotlib
    scikit-learn
    seaborn
    imageio
    wandb
    google-cloud-bigquery
    pyarrow
    fastparquet

[options.entry_points]
console_scripts =
    nucml-generate-datasets = nucml.datasets.generator:main

[options.packages.find]
include = nucml*

[options.extras_require]
tests =
    pytest
    flake8
    flake8-docstrings
# dev =
#     # Add a list of packages required for development environment (Optional)
#     typing-extensions
#     pre-commit
docs =
    sphinx >= 4
    sphinx-rtd-theme


[flake8]
max_line_length = 120
ignore = E402, E226, W503, W605, D104
exclude =
    venv
    .eggs
    build
# pydocstyle configuration for flake8-docstrings
docstring-convention = google
docstring-match-dir = src
per-file-ignores =
    tests/*: D100, D205, D212, D415

[pycodestyle]
max-line-length = 120
